# process-display

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
bounded-queue/: Cargo.toml
bounded-queue/src/: bounded_queue.rs  cpu_item.rs  lib.rs  memory_item.rs  temp_item.rs
dynamic-list/: Cargo.toml  README.md
dynamic-list/src/: dynamic_list.rs  lib.rs
performance-queue/: Cargo.toml
performance-queue/src/: bounded_queue.rs  cpu_item.rs  cpu_perf_info.rs  lib.rs  memory_item.rs  perf_item.rs
process-list/: Cargo.toml
process-list/src/: lib.rs  process_item_info.rs  process_list.rs  process_list_item.rs  process_list_items.rs
src/: app.rs  config.rs  input.rs  main.rs
src/components/: command.rs  command_new.rs  cpu.rs  error.rs  filter.rs  help.rs  memory.rs  mod.rs  network.rs  performance.rs  process.rs  process_filter.rs  process_list.rs  process_list_items.rs  search_bar.rs  sysinfo_wrapper.rs  system.rs  system_component.rs  system_wrapper.rs  tab.rs  temp.rs  terminate.rs  vertical_tabs.rs
src/events/: event.rs
src/models/: bounded_queue_model.rs  list_iter.rs  mod.rs  process_list_items.rs  vec_model.rs
src/performance/: cpu_perf_info.rs  mod.rs  perf_item.rs  perf_items.rs
src/performance_structs/: cpu_perf_info.rs  perf_item.rs  perf_items.rs
src/process/: list_items_iter.rs  list_iter.rs  mod.rs  process_list.rs  process_list_item.rs  process_list_items.rs
src/process_structs/: mod.rs  process_list.rs  process_list_items.rs
src/services/: mod.rs  sysinfo_service.rs
src/state/: list_state.rs  mod.rs  process_sort_order.rs  (+1 more)
(+30 files in other folders)
