[package]
name = "process-display"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "bounded-queue",
    "dynamic-list"
]

authours = ["rhasler1 <rhasler@luc.edu>"]

[dependencies]
sysinfo = "0.34.2"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
ratatui = { version = "0.26.0", features = ["serde", "macros"] }
serde = { version = "1.0.188", features = ["derive"] }
anyhow = "1.0.97"
itertools = "0.10.0"
bounded-queue = {path = "./bounded-queue", version = "0.1.0"}
dynamic-list = {path = "./dynamic-list", version = "0.1.0"}
clippy = "0.0.302"
